--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 LOCAL_PORT=:PORT
 DATABASE_URL="postgres://<username>:<password>@<hostname>:<port>/<database>"
-(ex:"psql postgres://myapplicationuser:mypass@myhost:1234/applicationdb")
+(ex:"postgres://myapplicationuser:mypass@myhost:1234/applicationdb")
