Implemented a test instance of the PostgreSQL database for the purpose of run integration tests

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 # Create an .env file with the following variables
 LOCAL_PORT=:PORT
 DATABASE_URL="postgres://<username>:<password>@<hostname>:<port>/<database>?sslmode=disable"
+# TEST_DATABASE_URL="postgres://<username>:<password>@<hostname>:<port>/<database>?sslmode=disable"
+TEST_DATABASE_URL="<username>:<password>@<hostname>:<port>/<database>?sslmode=disable"
 # (ex:"postgres://myapplicationuser:mypass@myhost:1234/applicationdb?sslmode=disable")
